--- a/board.css
+++ b/board.css
@@ -1,11 +1,16 @@
 .caseBlanc, .caseBrun{
-    height : 80px;
-    width : 80px;
+    height : 70px;
+    width : 70px;
     border : 1px solid #000000;
     }
     .caseBrun {
-    background-color: rgb(46, 43, 43);
+    background-color: rgb(71, 17, 17);
     }
     .caseBlanc {
     background-color: #ffffff;
+    }
+
+    .pos {
+        font-weight: bold;
+        text-align: center;
     }
