Add pieces id and hover style.

--- a/pieces.css
+++ b/pieces.css
@@ -1,3 +1,15 @@
+.on {
+    display: block;
+}
+
+.off {
+    display: none;
+}
+
+/*******************
+---- SPRITES ------
+*******************/
+
 .w_king, .w_queen, .w_bishop, .w_knight, .w_tower, .w_pawn, .b_king, .b_queen, .b_bishop, .b_knight, .b_tower, .b_pawn  {
     height: 70px;
     width: 70px;
@@ -51,10 +63,11 @@
     background: url('assets/sprites.png') 75px 80px;
 }
 
-.on {
-    display: block;
-}
+/*******************
+---- PIECES ------
+*******************/
 
-.off {
-    display: none;
+#w_king:hover, #w_queen:hover, #w_bishop:hover, #w_knight:hover, #w_tower:hover, #w_pawn:hover, #b_king:hover, #b_queen:hover, #b_bishop:hover, #b_knight:hover, #b_tower:hover, #b_pawn:hover {
+    background-color: rgba(132, 199, 93, 0.829);
+    cursor: pointer;
 }
