--- a/pieces.css
+++ b/pieces.css
@@ -7,7 +7,12 @@
 }
 
 /*******************
----- SPRITES ------
+ _____   _____   _____    _   _____   _____   _____  
+/  ___/ |  _  \ |  _  \  | | |_   _| | ____| /  ___/ 
+| |___  | |_| | | |_| |  | |   | |   | |__   | |___  
+\___  \ |  ___/ |  _  /  | |   | |   |  __|  \___  \ 
+ ___| | | |     | | \ \  | |   | |   | |___   ___| | 
+/_____/ |_|     |_|  \_\ |_|   |_|   |_____| /_____/ 
 *******************/
 
 .w_king, .w_queen, .w_bishop, .w_knight, .w_tower, .w_pawn, .b_king, .b_queen, .b_bishop, .b_knight, .b_tower, .b_pawn  {
@@ -64,7 +69,12 @@
 }
 
 /*******************
----- PIECES ------
+ _____   _   _____   _____   _____   _____  
+|  _  \ | | | ____| /  ___| | ____| /  ___/ 
+| |_| | | | | |__   | |     | |__   | |___  
+|  ___/ | | |  __|  | |     |  __|  \___  \ 
+| |     | | | |___  | |___  | |___   ___| | 
+|_|     |_| |_____| \_____| |_____| /_____/ 
 *******************/
 
 #w_king:hover, #w_queen:hover, #w_bishop:hover, #w_knight:hover, #w_tower:hover, #w_pawn:hover, #b_king:hover, #b_queen:hover, #b_bishop:hover, #b_knight:hover, #b_tower:hover, #b_pawn:hover {
