--- a/styles/board.css
+++ b/styles/board.css
@@ -1,4 +1,4 @@
-.caseBlanc, .caseBrun{
+.caseBlanche, .caseBrun{
     height : 70px;
     width : 70px;
     border : 1px solid #000000;
@@ -6,8 +6,8 @@
     .caseBrun {
     background-color: rgb(71, 17, 17);
     }
-    .caseBlanc {
-    background-color: #ffffff;
+    .caseBlanche {
+    background-color: #c4c4c4;
     }
 
     .caseEnable {
