--- a/styles/console.css
+++ b/styles/console.css
@@ -3,11 +3,23 @@
     height: 680px;
     border: 3px solid grey;
     float: right;
+    background-color: black;
 }
 
 #title {
     font-family: 'Courier New', Courier, monospace;
+    font-size: large;
     font-weight: bold;
-    color: black;
+    color: green;
     text-align:center;
+    text-decoration: underline;
+}
+
+#elements {
+    margin-left: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: medium;
+    font-weight: normal;
+    color: green;
+    text-align: left;
 }
